--- a/game/game/game.vcxproj.filters
+++ b/game/game/game.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="EnemyType2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="time.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -69,6 +72,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="EnemyType2.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="time.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
